--- a/templates/forms.html
+++ b/templates/forms.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <link rel="stylesheet" href="\static\css\style.css">
 </head>
-<body class="dashboard">
+<body class="index">
     <section id="nav">
         <a href="{{url_for('dashboard')}}" class="head">Accounting</a>
         <a href="#" class="tail"><i class="fa-sharp fa-solid fa-right-from-bracket"></i></a>
