--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -80,6 +80,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('role_assignment') }}">Role Assignment</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('reset_password') }}">Reset Password</a>
+                    </li>
                     {% endif %}
                     <!-- Add more navigation links as needed -->
                 </ul>
